--- a/stylesheet.css
+++ b/stylesheet.css
@@ -18,15 +18,20 @@ button {
 }
 
 .player-controls {
-    height: 40px;
+    top: 207px;
+    height: 30px;
     width: 100%;
     background: #2d2d2d;
-    background: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.6));
+    background: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.8));
 
-    text-align: right;
+    text-align: left;
     position: absolute;
 
     z-index: 2147483647;
+}
+
+#volume-slider {
+    margin-right: 135px;
 }
 
 video::-webkit-media-controls {
