--- a/stylesheet.css
+++ b/stylesheet.css
@@ -19,20 +19,43 @@ button {
 
 .player-controls {
     bottom: 1%;
-    height: 35px;
     width: 100%;
+    text-align: left;
+    position: absolute;
 
     background: #2d2d2d;
     background: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.8));
-
-    text-align: left;
-    position: absolute;
 
     z-index: 2147483647;
 }
 
 #volume-slider {
-    margin-top: 5px;
+    margin-top: 20px;
+}
+
+input[type=range] {
+    -webkit-appearance: none;
+    background: transparent;
+}
+input[type=range]::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    height: 16px;
+    width: 8px;
+    background: #ffffff;
+    margin-top: -6px;
+}
+input[type=range]:focus {
+    outline: none;
+}
+input[type=range]::-webkit-slider-runnable-track {
+    width: 100%;
+    height: 4px;
+    margin-top: -20px;
+    cursor: pointer;
+    background: #000000;
+    background: rgba(0,0,0,0.5);
+    border-color: transparent;
+    color: transparent;
 }
 
 video::-webkit-media-controls {
