--- a/stylesheet.css
+++ b/stylesheet.css
@@ -31,6 +31,7 @@ button {
 
 #volume-slider {
     margin-top: 20px;
+    margin-right: 30%;
 }
 
 input[type=range] {
@@ -61,3 +62,14 @@ input[type=range]::-webkit-slider-runnable-track {
 video::-webkit-media-controls {
     display:none !important;
 }
+
+.dropdown {
+    overflow: hidden;
+}
+.dropdown-content {
+    display: none;
+    position: absolute;
+    bottom: 100%;
+    margin-left: 65%;
+}
+
